--- a/index.html
+++ b/index.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = 'en'>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset = 'UTF-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Nanjing Story: The Art of Collecting Seals</title>
 </head>
+
 <body>
-this is a test!
+<!--background image-->
+    <div class="container-fluid p-5 bg-primary text-white text-center">
+        <h1>大图放这里</h1>
+        <p>请调整这张响应式页面的大小以查看效果！</p>
+    </div>
+
+<!--  navigation  -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">Homepage</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">首页</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">剧情简介</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">角色介绍</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">精彩片段</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">留言板</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">账号登录</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+
+
 </body>
 </html>
