--- a/index.html
+++ b/index.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
-<html lang = 'en'>
+<html lang="en">
 <head>
-    <meta charset = 'UTF-8'>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Nanjing Story: The Art of Collecting Seals</title>
 </head>
-
 <body>
-<!--background image-->
-    <div class="container-fluid p-5 bg-primary text-white text-center">
-        <h1>大图放这里</h1>
-        <p>请调整这张响应式页面的大小以查看效果！</p>
-    </div>
+<!-- Background image -->
+<div class="container-fluid p-5 bg-primary text-white text-center">
+    <h1>大图放这里</h1>
+    <p>请调整这张响应式页面的大小以查看效果！</p>
+</div>
 
-<!--  navigation  -->
+<!-- Navigation -->
+<!--<nav>-->
+<!--    <a href="#" class="nav-link" data-page="Nanjing_University">Nanjing University</a>-->
+<!--    <a href="#" class="nav-link" data-page="about">About</a>-->
+<!--    <a href="#" class="nav-link" data-page="contact">Contact</a>-->
+<!--</nav>-->
+
+
+
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Homepage</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">Contents</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">首页</a>
+                        <a href="#" class="nav-link" data-page="Nanjing_University">Nanjing University</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">剧情简介</a>
+                        <a href="#" class="nav-link" data-page="Nanjing_Opera_Literature">Nanjing Opera Literature</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">角色介绍</a>
+                        <a href="#" class="nav-link" data-page="Nanjing_University">Nanjing University</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">精彩片段</a>
+                        <a href="#" class="nav-link" data-page="Nanjing_University">Nanjing University</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">留言板</a>
+                        <a href="#" class="nav-link" data-page="Nanjing_University">Nanjing University</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">账号登录</a>
+                        <a href="#" class="nav-link" data-page="Nanjing_University">Nanjing University</a>
                     </li>
                 </ul>
             </div>
@@ -52,5 +60,20 @@
 
 
 
+
+<div id="content"></div>
+
+
+
+
+<script>
+    $(document).ready(function() {
+        $('.nav-link').on('click', function(event) {
+            event.preventDefault();
+            let page = $(this).data('page');
+            $('#content').load(page + '.html');
+        });
+    });
+</script>
 </body>
 </html>
