--- a/Nanjing_Opera_Literature.html
+++ b/Nanjing_Opera_Literature.html
@@ -6,6 +6,10 @@
     <title>Nanjing University</title>
 </head>
 <body>
-Nanjing_Opera_Literature
+    <div class="container mt-5">
+        <div class="section-title text-center">
+            <h2> About Seals </h2>
+        </div>
+    </div>
 </body>
 </html>
