--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Nanjing Story: The Art of Collecting Seals</title>
+    <style>
+        body {
+            background-image: url('img/background.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
+    </style>
 </head>
 <body>
 <!-- Background image -->
+
+
 <div class="container-fluid p-5 bg-primary text-white text-center">
     <h1>大图放这里</h1>
     <p>请调整这张响应式页面的大小以查看效果！</p>
 </div>
+
 
 <!-- Navigation -->
 <!--<nav>-->
@@ -21,19 +32,23 @@
 <!--    <a href="#" class="nav-link" data-page="contact">Contact</a>-->
 <!--</nav>-->
 
-
-
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">Contents</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+<!--            todo: button键不起作用-->
+
+
 
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link" data-page="Home_Page">Homepage</a>
+                    </li>
                     <li class="nav-item active">
                         <a href="#" class="nav-link" data-page="Nanjing_University">Nanjing University</a>
                     </li>
@@ -64,16 +79,19 @@
 <div id="content"></div>
 
 
+    <script>
+        $(document).ready(function() {
+            // Automatically load Home_page.html when the page loads
+            $('#content').load('Home_page.html');
 
-
-<script>
-    $(document).ready(function() {
-        $('.nav-link').on('click', function(event) {
-            event.preventDefault();
-            let page = $(this).data('page');
-            $('#content').load(page + '.html');
+            // Navigation link click handler
+            $('.nav-link').on('click', function(event) {
+                event.preventDefault();
+                let page = $(this).data('page');
+                $('#content').load(page + '.html');
+            });
         });
-    });
-</script>
+    </script>
+
 </body>
 </html>
