--- a/Nanjing_University.html
+++ b/Nanjing_University.html
@@ -2,12 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Temple Page</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/Nanjing_University_styles.css">
     <title>Nanjing University</title>
 </head>
 <body>
-<div id="content">
-Nanjing University
-</div>
+    <div class="container">
+        <!-- Header Section -->
+        <div class="row my-4 p-4 bg-light text-dark rounded">
+            <div class="col-md-8">
+                <h2>隆兴寺—摩尼殿</h2>
+                <h3>Longxing Temple - Mani Hall</h3>
+                <p>
+                    我国古建筑专家梁思成先生称这种布局平时除去北京故宫紫禁城外，只有宋祖陵中发现。并将要拍摄、编入《中国建筑史》。解放前由于年久失修，大殿架梁倾斜严重，1977年至1980年由国家文物局拨款对这座大殿进行了原样性修复。
+                </p>
+                <a href="#" class="btn btn-primary">更多了解</a>
+            </div>
+            <div class="col-md-4 text-center">
+                <img src="https://example.com/image1.jpg" alt="Temple Image" class="img-fluid rounded-circle">
+            </div>
+        </div>
+        <!-- Statues Section -->
+        <div class="row my-4">
+            <div class="col-md-4 text-center">
+                <img src="https://example.com/statue1.jpg" alt="Statue 1" class="img-fluid rounded">
+                <h4>罗金</h4>
+                <h5>Luo Jin</h5>
+                <p>因发喜冒亭众色颜不免，寒不动释论者，躯心云天，永远保持笑容，放荡度僧通度众生相貌。观者由高优衔到低，面容柔和静。</p>
+            </div>
+            <div class="col-md-4 text-center">
+                <img src="https://example.com/statue2.jpg" alt="Statue 2" class="img-fluid rounded">
+                <h4>弥勒</h4>
+                <h5>Mi Le</h5>
+                <p>大社稷佛象以修为全化标准，履令已入百余年的历史。这是一位旋笑天功上了好形象，其像属于明代彩绘石雕化色金锭上</p>
+            </div>
+        </div>
+        <!-- Hall Section -->
+        <div class="row my-4">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://example.com/hall1.jpg" class="card-img-top" alt="Hall 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Mani Hall</h5>
+                        <p class="card-text">摩尼殿建筑于北宋庆历年间（1052年），大殿高而雄伟，真正显示了中国北宋中期—山寺之间的原始地位。</p>
+                        <a href="#" class="btn btn-primary">Read story</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://example.com/hall2.jpg" class="card-img-top" alt="Hall 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Hall of the Heavenly King</h5>
+                        <p class="card-text">天王殿建筑于北宋，最有影响力的一座国家代建筑中期的一例。离宫四十六年（1780年）创造的。</p>
+                        <a href="#" class="btn btn-primary">Read story</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://example.com/hall3.jpg" class="card-img-top" alt="Hall 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Glazed wall</h5>
+                        <p class="card-text">琉璃照壁建筑于清乾隆十五年（1780年），皇上第三任天花图案清代国家管制重要体现。</p>
+                        <a href="#" class="btn btn-primary">Read story</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
