--- a/Nanjing_University.html
+++ b/Nanjing_University.html
@@ -13,37 +13,64 @@
         <!-- Header Section -->
         <div class="row my-4 p-4 bg-light text-dark rounded">
             <div class="col-md-8">
-                <h2>隆兴寺—摩尼殿</h2>
-                <h3>Longxing Temple - Mani Hall</h3>
+                <h2>Nanjing University</h2>
                 <p>
-                    我国古建筑专家梁思成先生称这种布局平时除去北京故宫紫禁城外，只有宋祖陵中发现。并将要拍摄、编入《中国建筑史》。解放前由于年久失修，大殿架梁倾斜严重，1977年至1980年由国家文物局拨款对这座大殿进行了原样性修复。
+                    Nanjing University is a prestigious higher education institution with a long history.
+                    Its predecessor was the Sanjiang Normal School, established in 1902. Over the years,
+                    it evolved through various stages, including Liangjiang Normal School,
+                    Nanjing Higher Normal School, National Southeastern University,
+                    National Fourth Sun Yat-sen University, National Central University,
+                    and National Nanjing University. In 1950, it was renamed Nanjing University.
                 </p>
-                <a href="#" class="btn btn-primary">更多了解</a>
+                <a href="https://www.nju.edu.cn/en/" class="btn btn-primary">Learn more</a>
             </div>
             <div class="col-md-4 text-center">
-                <img src="https://example.com/image1.jpg" alt="Temple Image" class="img-fluid rounded-circle">
+                <img src="img/Nanjing_University/IMG_0240%202.jpeg" alt="Temple Image" class="img-fluid rounded-circle">
             </div>
         </div>
+
+
+
         <!-- Statues Section -->
         <div class="row my-4">
             <div class="col-md-4 text-center">
-                <img src="https://example.com/statue1.jpg" alt="Statue 1" class="img-fluid rounded">
-                <h4>罗金</h4>
+                <img src="img/Nanjing_University/IMG_0441%202.jpeg" alt="Statue 1" class="img-fluid rounded"
+                     style="height: 300px; width: 100%;">
+                <h4>南京大学新闻传播学院</h4>
                 <h5>Luo Jin</h5>
-                <p>因发喜冒亭众色颜不免，寒不动释论者，躯心云天，永远保持笑容，放荡度僧通度众生相貌。观者由高优衔到低，面容柔和静。</p>
+                <p>南京大学的新闻传播学科，发端于1936年南京大学前身金陵大学孙明经先生创立的“电影与播音专修科”，是中国最早的电影广播教育单位，
+                    也是中国影音传播高等教育的起源。1952年，金陵大学与南京大学（由国立中央大学改建）参与国家院系调整，两校文、理学院合并，
+                    改设新闻专修科。1986年，南京大学恢复新闻专业教学建制，并于1992年10月正式建系。2003年12月，南京大学成立新闻传播学院。
+                    2014年4月，中共江苏省委宣传部和南京大学共建新闻传播学院工作正式启动。2018年秋, 学院从鼓楼校区搬迁至仙林校区，
+                    新建的院楼占地面积一万多平方米, 环境优美, 拥有现代化的科研、教学软硬件设施。</p>
             </div>
+
             <div class="col-md-4 text-center">
-                <img src="https://example.com/statue2.jpg" alt="Statue 2" class="img-fluid rounded">
-                <h4>弥勒</h4>
+                <img src="img/Nanjing_University/IMG_0451%202.jpeg" alt="Statue 2" class="img-fluid rounded"
+                style="height: 300px; width: 100%;">
+                <h4>南京大学</h4>
+                <h5>Mi Le</h5>
+                <p>大社稷佛象以修为全化标准，履令已入百余年的历史。这是一位旋笑天功上了好形象，其像属于明代彩绘石雕化色金锭上</p>
+            </div>
+
+            <div class="col-md-4 text-center">
+                <img src="img/Nanjing_University/IMG_0243%202.jpeg" alt="Statue 2" class="img-fluid rounded"
+                style="height: 300px; width: 100%;">
+                <h4>图书馆</h4>
                 <h5>Mi Le</h5>
                 <p>大社稷佛象以修为全化标准，履令已入百余年的历史。这是一位旋笑天功上了好形象，其像属于明代彩绘石雕化色金锭上</p>
             </div>
         </div>
+
+
+
+
         <!-- Hall Section -->
         <div class="row my-4">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://example.com/hall1.jpg" class="card-img-top" alt="Hall 1">
+                    <img src="img/Nanjing_University/IMG_0241%202.jpeg" class="card-img-top" alt="Hall 1"
+                    style="height: 300px; width: 100%;">
                     <div class="card-body">
                         <h5 class="card-title">Mani Hall</h5>
                         <p class="card-text">摩尼殿建筑于北宋庆历年间（1052年），大殿高而雄伟，真正显示了中国北宋中期—山寺之间的原始地位。</p>
@@ -53,7 +80,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://example.com/hall2.jpg" class="card-img-top" alt="Hall 2">
+                    <img src="img/Nanjing_University/IMG_0236%202.jpeg" class="card-img-top" alt="Hall 2"
+                    style="height: 300px; width: 100%;">
                     <div class="card-body">
                         <h5 class="card-title">Hall of the Heavenly King</h5>
                         <p class="card-text">天王殿建筑于北宋，最有影响力的一座国家代建筑中期的一例。离宫四十六年（1780年）创造的。</p>
@@ -63,7 +91,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://example.com/hall3.jpg" class="card-img-top" alt="Hall 3">
+                    <img src="img/Nanjing_University/IMG_0235%202.jpeg" class="card-img-top" alt="Hall 3"
+                    style="height: 300px; width: 100%;">
                     <div class="card-body">
                         <h5 class="card-title">Glazed wall</h5>
                         <p class="card-text">琉璃照壁建筑于清乾隆十五年（1780年），皇上第三任天花图案清代国家管制重要体现。</p>
@@ -73,6 +102,8 @@
             </div>
         </div>
     </div>
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
