--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
 
         .header img {
             width: 100%;
-            height: 100%; /* Maintain aspect ratio */
+            height: auto; /* Maintain aspect ratio */
         }
 
     </style>
 </head>
-<body>
 
+
+
+<body>
     <!-- Header with image -->
     <div class="header">
-        <img src="img/Nanjing_Uninversity_header.jpg" alt="Nanjing University Header">
+        <img src="img/header.jpg" alt="Nanjing University Header">
     </div>
 
     <!-- Navigation -->
