Revert "Nanjing University"
This reverts commit 91119f85452d0e9f25b884254d1608ab56219913.

--- a/index.html
+++ b/index.html
@@ -23,18 +23,16 @@
 
         .header img {
             width: 100%;
-            height: auto; /* Maintain aspect ratio */
+            height: 100%; /* Maintain aspect ratio */
         }
 
     </style>
 </head>
-
-
-
 <body>
+
     <!-- Header with image -->
     <div class="header">
-        <img src="img/header.jpg" alt="Nanjing University Header">
+        <img src="img/Nanjing_Uninversity_header.jpg" alt="Nanjing University Header">
     </div>
 
     <!-- Navigation -->
