--- a/Nanjing_University.html
+++ b/Nanjing_University.html
@@ -13,32 +13,41 @@
         <!-- Header Section -->
         <div class="row my-4 p-4 bg-light text-dark rounded">
             <div class="col-md-8">
-                <h2>隆兴寺—摩尼殿</h2>
-                <h3>Longxing Temple - Mani Hall</h3>
+                <h2>南京大学</h2>
                 <p>
-                    我国古建筑专家梁思成先生称这种布局平时除去北京故宫紫禁城外，只有宋祖陵中发现。并将要拍摄、编入《中国建筑史》。解放前由于年久失修，大殿架梁倾斜严重，1977年至1980年由国家文物局拨款对这座大殿进行了原样性修复。
+                    text here!
                 </p>
-                <a href="#" class="btn btn-primary">更多了解</a>
+                <a href="#" class="btn btn-primary">Learn more</a>
             </div>
             <div class="col-md-4 text-center">
-                <img src="https://example.com/image1.jpg" alt="Temple Image" class="img-fluid rounded-circle">
+                <img src="img/Nanjing%20University/IMG_0240%202.jpeg" alt="Temple Image" class="img-fluid rounded-circle">
             </div>
         </div>
+
+
         <!-- Statues Section -->
         <div class="row my-4">
             <div class="col-md-4 text-center">
-                <img src="https://example.com/statue1.jpg" alt="Statue 1" class="img-fluid rounded">
-                <h4>罗金</h4>
-                <h5>Luo Jin</h5>
-                <p>因发喜冒亭众色颜不免，寒不动释论者，躯心云天，永远保持笑容，放荡度僧通度众生相貌。观者由高优衔到低，面容柔和静。</p>
+                <img src="img/Nanjing%20University/IMG_0441%202.jpeg" alt="Statue 1" class="img-fluid rounded"
+                style="height: 300px; width: 100%;">
+                <h4>新传学院</h4>
+                <p>text here!</p>
             </div>
             <div class="col-md-4 text-center">
-                <img src="https://example.com/statue2.jpg" alt="Statue 2" class="img-fluid rounded">
-                <h4>弥勒</h4>
-                <h5>Mi Le</h5>
-                <p>大社稷佛象以修为全化标准，履令已入百余年的历史。这是一位旋笑天功上了好形象，其像属于明代彩绘石雕化色金锭上</p>
+                <img src="img/Nanjing%20University/IMG_0451%202.jpeg" alt="Statue 2" class="img-fluid rounded"
+                style="height: 300px; width: 100%;">
+                <h4>text here</h4>
+                <p>text here</p>
+            </div>
+            <div class="col-md-4 text-center">
+                <img src="img/Nanjing%20University/IMG_0243%202.jpeg" alt="Statue 2" class="img-fluid rounded"
+                style="height: 300px; width: 100%;">
+                <h4>text here</h4>
+                <p>text here</p>
             </div>
         </div>
+
+
         <!-- Hall Section -->
         <div class="row my-4">
             <div class="col-md-4">
