--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
             width: 100%;
             height: 100%; /* Maintain aspect ratio */
         }
-
     </style>
 </head>
 <body>
 
     <!-- Header with image -->
     <div class="header">
-        <img src="img/Nanjing_Uninversity_header.jpg" alt="Nanjing University Header">
+        <img src="img/header.jpg" alt="Nanjing University Header">
     </div>
 
     <!-- Navigation -->
