--- a/Nanjing_University.html
+++ b/Nanjing_University.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temple Page</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<!--    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="css/Nanjing_University_styles.css">
-    <title>Nanjing University</title>
+    <title>Nanjing_University</title>
 </head>
+
+
+
+
 <body>
     <div class="container">
         <!-- Header Section -->
@@ -23,6 +26,7 @@
                 <img src="img/Nanjing%20University/IMG_0240%202.jpeg" alt="Temple Image" class="img-fluid rounded-circle">
             </div>
         </div>
+
 
 
         <!-- Statues Section -->
@@ -52,7 +56,8 @@
         <div class="row my-4">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://example.com/hall1.jpg" class="card-img-top" alt="Hall 1">
+                    <img src="img/Nanjing%20University/IMG_0439%202.jpeg" class="card-img-top" alt="Hall 1"
+                    style="height: 500px; width: 100%;">
                     <div class="card-body">
                         <h5 class="card-title">Mani Hall</h5>
                         <p class="card-text">摩尼殿建筑于北宋庆历年间（1052年），大殿高而雄伟，真正显示了中国北宋中期—山寺之间的原始地位。</p>
@@ -60,9 +65,11 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://example.com/hall2.jpg" class="card-img-top" alt="Hall 2">
+                    <img src="img/Nanjing%20University/IMG_0236%202.jpeg" class="card-img-top" alt="Hall 2"
+                    style="height: 500px; width: 100%;">
                     <div class="card-body">
                         <h5 class="card-title">Hall of the Heavenly King</h5>
                         <p class="card-text">天王殿建筑于北宋，最有影响力的一座国家代建筑中期的一例。离宫四十六年（1780年）创造的。</p>
@@ -70,39 +77,22 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://example.com/hall3.jpg" class="card-img-top" alt="Hall 3">
+                    <img src="img/Nanjing%20University/IMG_0235%202.jpeg" class="card-img-top" alt="Hall 3"
+                    style="height: 500px; width: 100%;">
                     <div class="card-body">
                         <h5 class="card-title">Glazed wall</h5>
                         <p class="card-text">琉璃照壁建筑于清乾隆十五年（1780年），皇上第三任天花图案清代国家管制重要体现。</p>
-<!--                        <a href="#" class="btn btn-primary">Read story</a>-->
-                        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#contentModal">Read story</a>
-
-                        <div class="modal fade" id="contentModal" tabindex="-1" role="dialog" aria-labelledby="contentModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="contentModalLabel">Story Introduction</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <p>This is the content of your story. You can introduce your story here in detail. Add more text to see how it looks with more content. You can also include images, videos, or any other HTML elements to make the introduction more engaging.</p>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
+                        <a href="#" class="btn btn-primary">Read story</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
