--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
         .navbar-nav .nav-link {
             color: #000 !important;
         }
-
         .header img {
             width: 100%;
             height: 100%; /* Maintain aspect ratio */
+            max-height: 300px; /* Set a maximum height */
+            /* TODO 询问女儿需不需要添加object-fit */
+            object-fit: cover; /* Ensure the image covers the container without stretching */
+
         }
     </style>
 </head>
@@ -55,6 +58,10 @@
                     <li class="nav-item">
                         <a href="#" class="nav-link" data-page="Nanjing_Opera_Literature">Nanjing Opera Literature</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link" data-page="Nanjing_Fine_Foods">Nanjing Fine Foods</a>
+                    </li>
+
                     <!-- Add more nav items here -->
                 </ul>
             </div>
