--- a/Home_Page.html
+++ b/Home_Page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home_Page</title>
+
 </head>
 <body>
 
@@ -12,44 +13,128 @@
             <h2> About Seals </h2>
         </div>
     </div>
-
-
-    <div class="container mt-5">
-        <div class="section-title text-center">
-            <h2>关于作品</h2>
-        </div>
-        <div class="text-center mb-5">
-            <img src="img/test.png" class="img-fluid" alt="ちいかわ">
-        </div>
+<!--        <div class="text-center mb-5" style="max-width: 50%; height: auto;" >-->
+<!--            <img src="img/IMG_0239%202.jpeg" class="img-fluid"  >-->
+<!--        </div>-->
         <p class="text-justify">
-            test here!
+            text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!
+            text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!
+            text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!
+            text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!
+            text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!
+            text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!
+            text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!
+            text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!text here!
         </p>
 
 
         <div class="section-title text-center">
             <h2>精彩照片</h2>
         </div>
-                <div class="row gallery">
+
+        <div class="row gallery">
             <div class="col-md-4 mb-4">
-                <img src="img/test.png" class="img-fluid" alt="image1">
-            </div>
-            <div class="col-md-4 mb-4">
-                <img src="img/test.png" class="img-fluid" alt="image2">
-            </div>
-            <div class="col-md-4 mb-4">
-                <img src="img/test.png" class="img-fluid" alt="image3">
-            </div>
-            <div class="col-md-4 mb-4">
-                <img src="img/test.png" class="img-fluid" alt="image4">
-            </div>
-            <div class="col-md-4 mb-4">
-                <img src="img/test.png" class="img-fluid" alt="image5">
-            </div>
-            <div class="col-md-4 mb-4">
-                <img src="img/test.png" class="img-fluid" alt="image6">
-            </div>
+                    <!-- 轮播1 -->
+                    <div id="demo1" class="carousel slide" data-bs-ride="carousel">
+
+                      <!-- 指标/点 -->
+                      <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                      </div>
+
+                      <!-- 幻灯片/轮播 -->
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="img/Homepage/IMG_0001%202.jpeg" alt="Los Angeles" class="d-block w-100"
+                          style="width: 100%; height: 500px; object-fit: cover;">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/Homepage/IMG_0072%202.jpeg" alt="Chicago" class="d-block w-100"
+                          style="width: 100%; height: 500px; object-fit: cover;">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/Homepage/IMG_0075%202.jpeg" alt="New York" class="d-block w-100"
+                          style="width: 100%; height: 500px; object-fit: cover;">
+                        </div>
+                      </div>
+
+                      <!-- 左右控件/图标 -->
+                      <button class="carousel-control-prev" type="button" data-bs-target="#demo1" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#demo1" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                      </button>
+                    </div>
+                </div>
+
+             <div class="col-md-4 mb-4">
+                                     <!-- 轮播2 -->
+                    <div id="demo2" class="carousel slide" data-bs-ride="carousel">
+
+                      <!-- 指标/点 -->
+                      <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                      </div>
+
+                      <!-- 幻灯片/轮播 -->
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="img/Homepage/IMG_0001%202.jpeg" alt="Los Angeles" class="d-block w-100"
+                          style="width: 100%; height: 500px; object-fit: cover;">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/Homepage/IMG_0072%202.jpeg" alt="Chicago" class="d-block w-100"
+                          style="width: 100%; height: 500px; object-fit: cover;">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/Homepage/IMG_0075%202.jpeg" alt="New York" class="d-block w-100"
+                          style="width: 100%; height: 500px; object-fit: cover;">
+                        </div>
+                      </div>
+
+                      <!-- 左右控件/图标 -->
+                      <button class="carousel-control-prev" type="button" data-bs-target="#demo2" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#demo2" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                      </button>
+                    </div>
+                </div>
         </div>
-    </div>
+
+
+
+
+
+
+
+
+
+<!--            <div class="col-md-4 mb-4">-->
+<!--                <img src="img/test.png" class="img-fluid" alt="image1">-->
+<!--            </div>-->
+<!--            <div class="col-md-4 mb-4">-->
+<!--                <img src="img/test.png" class="img-fluid" alt="image2">-->
+<!--            </div>-->
+<!--            <div class="col-md-4 mb-4">-->
+<!--                <img src="img/test.png" class="img-fluid" alt="image3">-->
+<!--            </div>-->
+<!--            <div class="col-md-4 mb-4">-->
+<!--                <img src="img/test.png" class="img-fluid" alt="image4">-->
+<!--            </div>-->
+<!--            <div class="col-md-4 mb-4">-->
+<!--                <img src="img/test.png" class="img-fluid" alt="image5">-->
+<!--            </div>-->
+<!--            <div class="col-md-4 mb-4">-->
+<!--                <img src="img/test.png" class="img-fluid" alt="image6">-->
+<!--            </div>-->
+
 
 
 
