Nanjing_Scenic_Spot

--- a/Nanjing_Fine_Food.html
+++ b/Nanjing_Fine_Food.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <title>Nanjing_Fine_Foods</title>
+<!--    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="css/Nanjing_University_styles.css">
+    <title>Nanjing_Fine_Food</title>
 </head>
 <body>
-<h1>南京美食</h1>
+<h1>Nanjing Fine Food</h1>
 </body>
 </html>
