--- a/Home_Page.html
+++ b/Home_Page.html
@@ -76,23 +76,23 @@
 
                       <!-- 指标/点 -->
                       <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-                        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-                        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                        <button type="button" data-bs-target="#demo2" data-bs-slide-to="0" class="active"></button>
+                        <button type="button" data-bs-target="#demo2" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#demo2" data-bs-slide-to="2"></button>
                       </div>
 
                       <!-- 幻灯片/轮播 -->
                       <div class="carousel-inner">
                         <div class="carousel-item active">
-                          <img src="img/Homepage/IMG_0001%202.jpeg" alt="Los Angeles" class="d-block w-100"
+                          <img src="img/Homepage/IMG_0018%202.jpeg" alt="Los Angeles" class="d-block w-100"
                           style="width: 100%; height: 500px; object-fit: cover;">
                         </div>
                         <div class="carousel-item">
-                          <img src="img/Homepage/IMG_0072%202.jpeg" alt="Chicago" class="d-block w-100"
+                          <img src="img/Homepage/IMG_0021%202.jpeg" alt="Chicago" class="d-block w-100"
                           style="width: 100%; height: 500px; object-fit: cover;">
                         </div>
                         <div class="carousel-item">
-                          <img src="img/Homepage/IMG_0075%202.jpeg" alt="New York" class="d-block w-100"
+                          <img src="img/Homepage/IMG_0066%202.jpeg" alt="New York" class="d-block w-100"
                           style="width: 100%; height: 500px; object-fit: cover;">
                         </div>
                       </div>
@@ -102,6 +102,44 @@
                         <span class="carousel-control-prev-icon"></span>
                       </button>
                       <button class="carousel-control-next" type="button" data-bs-target="#demo2" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                      </button>
+                    </div>
+                </div>
+
+
+             <div class="col-md-4 mb-4">
+                                     <!-- 轮播3 -->
+                    <div id="demo3" class="carousel slide" data-bs-ride="carousel">
+
+                      <!-- 指标/点 -->
+                      <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#demo3" data-bs-slide-to="0" class="active"></button>
+                        <button type="button" data-bs-target="#demo3" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#demo3" data-bs-slide-to="2"></button>
+                      </div>
+
+                      <!-- 幻灯片/轮播 -->
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="img/Homepage/IMG_0011%202.jpeg" alt="Los Angeles" class="d-block w-100"
+                          style="width: 100%; height: 500px; object-fit: cover;">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/Homepage/IMG_0012%202.jpeg" alt="Chicago" class="d-block w-100"
+                          style="width: 100%; height: 500px; object-fit: cover;">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/Homepage/IMG_0013%202.jpeg" alt="New York" class="d-block w-100"
+                          style="width: 100%; height: 500px; object-fit: cover;">
+                        </div>
+                      </div>
+
+                      <!-- 左右控件/图标 -->
+                      <button class="carousel-control-prev" type="button" data-bs-target="#demo3" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#demo3" data-bs-slide="next">
                         <span class="carousel-control-next-icon"></span>
                       </button>
                     </div>
@@ -134,17 +172,6 @@
 <!--            <div class="col-md-4 mb-4">-->
 <!--                <img src="img/test.png" class="img-fluid" alt="image6">-->
 <!--            </div>-->
-
-
-
-
-
-
-
-
-
-
-
 
 </body>
 </html>
