--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a href="#" class="nav-link" data-page="Nanjing_University">Nanjing University</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link" data-page="Nanjing_Opera_Literature">Nanjing Opera Literature</a>
+                        <a href="#" class="nav-link" data-page="Nanjing_Scenic_Spot">Nanjing Scenic Spot</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link" data-page="Nanjing_Fine_Food">Nanjing Fine Food</a>
@@ -81,7 +81,6 @@
                 }
             });
         }
-
         function bindNavigation() {
             $('.nav-link').off('click').on('click', function(event) {
                 event.preventDefault();
